--- a/index.ipynb
+++ b/index.ipynb
@@ -876,7 +876,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return list(map())"
+    "    return list(map(lamba ))"
    ]
   },
   {
