Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -876,7 +876,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return list(map(lambda term[0] * (x_value**term[1]) * (y_value**term[2])"
+    "    return list(map(lambda term[0] * (x_value*term[1]) * (y_value**term[2])"
    ]
   },
   {
