--- a/index.ipynb
+++ b/index.ipynb
@@ -869,14 +869,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-24-b69108a246a9>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-b69108a246a9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda term[0] * term[1], term[1]-1 , term[2])\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def term_df_dx(term):\n",
-    "    return list(map(lambda term[0] * term[1] -1 , term[2])"
+    "    return list(map(lambda term[0] * term[1], term[1]-1 , term[2])"
    ]
   },
   {
