--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -883,7 +883,7 @@
    ],
    "source": [
     "def term_df_dx(term):\n",
-    "    return list(map() term[0] * term[1], term[1]-1 , term[2])"
+    "    return list(map(lambda term[0] * term[1], term[1]-1 , term[2])"
    ]
   },
   {
