--- a/index.ipynb
+++ b/index.ipynb
@@ -949,7 +949,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    "
+    "      return term[0] * term[1], term[1]-1 , term[2]"
    ]
   },
   {
