--- a/index.ipynb
+++ b/index.ipynb
@@ -947,7 +947,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map(list_of_terms[0] * list_of_terms[1], term[1]-1 , term[2]))"
+    "    return list(map(list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , listerm[2]))"
    ]
   },
   {
