Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -946,7 +946,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def term_output(term, x_value, y_value):\n",
+    "    return term[0] * (x_value**term[1]) * (y_value**term[2])\n",
     "\n",
+    "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
+    "    out = list(map(lambda term: term_output(term, x_value, y_value), list_of_terms))\n",
+    "    return sum(out)\n",
     "\n",
     "\n",
     "def df_dx(list_of_terms):\n",
