--- a/index.ipynb
+++ b/index.ipynb
@@ -946,7 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def terms_output(term, x_value, y_value):\n",
+    "def term_output(term, x_value, y_value):\n",
     "    return term[0] * (x_value**term[1]) * (y_value**term[2])\n",
     "\n",
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
