--- a/index.ipynb
+++ b/index.ipynb
@@ -949,7 +949,7 @@
     "def term_output(term, x_value, y_value):\n",
     "    return term[0] * (x_value**term[1]) * (y_value**term[2])\n",
     "\n",
-    "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
+    "def \n",
     "    out = list(map(lambda term: term_output(term, x_value, y_value), list_of_terms))\n",
     "    return sum(out)\n",
     "\n",
