--- a/index.ipynb
+++ b/index.ipynb
@@ -951,7 +951,10 @@
     "\n",
     "def df_dx(list_of_terms):\n",
     "    out = list(map(lambda term: term_output(term, x_value, y_value), list_of_terms))\n",
-    "    return sum(out)"
+    "    return sum(out)\n",
+    "\n",
+    "#def df_dx(list_of_terms):\n",
+    "    #return list(map(list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]))"
    ]
   },
   {
@@ -974,10 +977,7 @@
     }
    ],
    "source": [
-    "df_dx(four_x_squared_y_plus_three_x_plus_y) # [(8, 1, 1), (3, 0, 0)]\n",
-    "\n",
-    "#def df_dx(list_of_terms):\n",
-    "    #return list(map(list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]))"
+    "df_dx(four_x_squared_y_plus_three_x_plus_y) # [(8, 1, 1), (3, 0, 0)]\n"
    ]
   },
   {
