Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -947,10 +947,10 @@
    "outputs": [],
    "source": [
     "def term_output(term):\n",
-    "    return term[0] * (x_value**term[1]) * (y_value**term[2])\n",
+    "    return list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
-    "    out = list(map(lambda term: term_output(term, x_value, y_value), list_of_terms))\n",
+    "    return list(map(lambda term: term_output(term, x_value, y_value), list_of_terms))\n",
     "\n",
     "#def df_dx(list_of_terms):\n",
     "    #return list(map(list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]))"
