Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -947,7 +947,7 @@
    "outputs": [],
    "source": [
     "def term_output(term):\n",
-    "    return list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]\n",
+    "    return lterms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
     "    return list(map(lambda term: term_output(term), list_of_terms))\n",
