Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -942,12 +942,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-43-91ce47d65a4d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-91ce47d65a4d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return terms[0] 1, * terms[1], terms[1]-terms[2]\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def term_output(term):\n",
-    "    return terms[0] 1* terms[1], terms[1]-terms[2]\n",
+    "    return terms[0] 1, * terms[1], terms[1]-terms[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
     "    return list(map(lambda term: term_output(term), list_of_terms))\n",
