--- a/index.ipynb
+++ b/index.ipynb
@@ -956,7 +956,7 @@
    ],
    "source": [
     "def term_output(term):\n",
-    "    return terms[0] 1, * terms[1], terms[1]-terms[2]\n",
+    "    return term[0],* terms[1], terms[1]-terms[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
     "    return list(map(lambda term: term_output(term), list_of_terms))\n",
