--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -946,7 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def (term):\n",
+    "def term_output(term):\n",
     "    return term[0] * term[1], term[1]-1, term[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
