--- a/index.ipynb
+++ b/index.ipynb
@@ -942,15 +942,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def (term):\n",
+    "def term_df_dx(term):\n",
     "    return term[0] * term[1], term[1]-1, term[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda term: term_output(term), list_of_terms))\n",
+    "    return list(map(lambda term: term_df_dx(term), list_of_terms))\n",
     "\n",
     "#def df_dx(list_of_terms):\n",
     "    #return list(map(list_of_terms[0] * list_of_terms[1], list_of_terms[1]-1 , list_of_terms[2]))"
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "[(8, 1, 1), (3, 0, 0), (0, -1, 1)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
