--- a/index.ipynb
+++ b/index.ipynb
@@ -1085,7 +1085,7 @@
    ],
    "source": [
     "three_x = four_x_squared_y_plus_three_x_plus_y[1]\n",
-    "term_df_dy(three_x) # (0, 1, -1)   4x2y+3x+y = 4"
+    "term_df_dy(three_x) # (0, 1, -1)   4x2y+3x+y = 4x"
    ]
   },
   {
