--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "[(4, 2, 1), (3, 1, 0), (1, 0, 1)]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
