Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1131,10 +1131,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    return term[0] * term[1], term[1]-1, term[2]\n",
-    "\n",
-    "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda term: term_df_dx(term), list_of_terms))"
+    "    return "
    ]
   },
   {
