--- a/index.ipynb
+++ b/index.ipynb
@@ -1130,7 +1130,7 @@
    },
    "outputs": [],
    "source": [
-    "def df_dy(list_of_terms):\n",
+    "def term_df_dy(list_of_terms):\n",
     "    return term[0] * term[1], term[1]-1, term[2]\n",
     "\n",
     "def df_dx(list_of_terms):\n",
