--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,14 +1124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(list_of_terms):\n",
-    "    return \n",
+    "    return term[0], term[1], term[2]-1\n",
     "\n",
     "def df_dx(list_of_terms):\n",
     "    return list(map(lambda term: term_df_dy(term), list_of_terms))"
@@ -1139,11 +1137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_dy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-9e7928e23bd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_dy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfour_x_squared_y_plus_three_x_plus_y\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# [(4, 2, 0), (1, 0, 0)]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_dy' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_dy(four_x_squared_y_plus_three_x_plus_y) # [(4, 2, 0), (1, 0, 0)]"
    ]
