--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1152,7 +1152,7 @@
     }
    ],
    "source": [
-    "df_dy(four_x_squared_y_plus_three_x_plus_y) # [(4, 2, 0), (1, 0, 0)]  4x2+3x"
+    "df_dy(four_x_squared_y_plus_three_x_plus_y) # [(4, 2, 0), (1, 0, 0)]  4x2"
    ]
   },
   {
