--- a/index.ipynb
+++ b/index.ipynb
@@ -1157,22 +1157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 3, 0), (3, 1, 0)]"
+       "[(2, 3, 0), (3, 1, 0), (1, 1, -1)]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_x_cubed_y_plus_three_y_x_plus_x = [(2, 3, 1), (3, 1, 1), (1, 1, 0)]\n",
+    "two_x_cubed_y_plus_three_y_x_plus_x = [(2, 3, 1), (3, 1, 1), (1, 1, 0)]  2x3+3\n",
     "df_dy(two_x_cubed_y_plus_three_y_x_plus_x) # [(2, 3, 0), (3, 1, 0)]"
    ]
   },
