--- a/index.ipynb
+++ b/index.ipynb
@@ -1129,6 +1129,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
+    "    if term[3] == 0 return 0\n",
     "    return term[0], term[1], term[2]-1\n",
     "\n",
     "def df_dy(list_of_terms):\n",
