--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,12 +1124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    if term[2] == 0: return \n",
+    "    if term[2] == 0: return 0\n",
     "    return term[0], term[1], term[2]-1\n",
     "\n",
     "def df_dy(list_of_terms):\n",
@@ -1138,16 +1138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4, 2, 0), None, (1, 0, 0)]"
+       "[(4, 2, 0), 0, (1, 0, 0)]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
